# agentic-workflow

./: .gitignore  LICENSE  README.md
backend/: .pre-commit-config.yaml  alembic.ini  pyproject.toml  test-dsl.json
backend/agentic_workflow/: main.py  migrations.py
backend/agentic_workflow/adk/auth/: oauth_service.py
backend/agentic_workflow/adk/models/: app.py  connection.py  executors.py  workflow.py  workflow_execution.py
backend/agentic_workflow/api/routes/: app.py  connection.py  workflow.py  workflow_execution.py
backend/agentic_workflow/crud/: app.py  app_action.py  base.py  connection.py  workflow.py  workflow_execution.py
backend/agentic_workflow/db/: models.py  session.py  utils.py
backend/agentic_workflow/models/: base.py
backend/agentic_workflow/utils/: auth.py  helpers.py  logger.py
backend/agentic_workflow/workflow/: temporal_client.py  workflow_orchestrator.py
backend/alembic/: env.py
backend/alembic/versions/: 2415b7759f3f_adding_app_version_to_conn.py  29816fbebd1f_workflow_execution_added.py  3aca3b352491_app_and_conn_tables.py  5469feaf9176_adding_ui_node_type_to_actions.py  de7c8b9f27d9_adding_app_and_conn_tables.py  ffa6672c0f8a_updated_app_and_conn_tables.py
backend/src/: main.py
backend/src/cli/: sync_apps.py
backend/src/crud/: app.py  base.py  connection.py
backend/src/db/: models.py
backend/src/models/: app.py  base.py  connection.py
backend/src/utils/: auth.py  helpers.py
backend/tests/: conftest.py  no_auth_provider.py
backend/tests/api/: test_app_routes.py  test_connection_routes.py  test_workflow_routes.py
(+30 files in other folders)
